--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@ h1, h2, h3 {
     font-size: 1.2rem;
 }
 .social-links {
+    justify-content: center;
     margin-top: 30px;
 }
 .social-links a {
